Fixed text not showing

--- a/app/css/sponsors.css
+++ b/app/css/sponsors.css
@@ -32,7 +32,7 @@
   }
 }
 
-.sponsor-text {
+.sponsortext {
   font-family: "Corbert", sans-serif;
   text-align: center;
   padding: 0 16vw;
